k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: product-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
        - name: product-catalog
          image: yourdockerhub/product-catalog:v1.0.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
