k8s/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: product-v1
spec:
  selector:
    app: product-catalog
  ports:
    - port: 80
      targetPort: 8080
